--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <li><a href="#recommendation">好評推薦</a></li>
         <li><a href="#transport">運送方式</a></li>
         <li><a href="#orderInfo">立即預訂</a></li>
-        <li><a href="js-course//admin.html">管理後台</a></li>
+        <li><a href="js-course/admin.html">管理後台</a></li>
       </ul>
     </div>
   </nav>
