--- a/admin.html
+++ b/admin.html
@@ -23,7 +23,7 @@
         menu
       </span>
       <ul class="topBar-menu">
-        <li><a href="/">瀏覽前台</a></li>
+        <li><a href="./">瀏覽前台</a></li>
         <li><a href="#">後台管理</a></li>
         <li><a href="#">管理員登入</a></li>
       </ul>
